# Open-source-repository

./: README.md
finalTask/task2_1/: 233.cpp  test1.py  text  virtualCom.py
finalTask/task2_2/: .test4.cpp.swp  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.c  test5  test5.cpp  test6  test6.cpp
finalTask/task2_3/: CMakeLists.txt  task2_3.cpp
finalTask/task2_4/: CMakeLists.txt  build.sh  task2_4.cpp
finalTask/task2_5/: test1.py
finalTask/task2_6/: CMakeLists.txt  task2_6.cpp
